# Greyhounds

./: .gitignore  README.md  betfair_parser.py  greyhound_trueskill.py  kelly_criterion.py  pyproject.toml  requirements.txt  run_dashboard.py
analytics/: __init__.py  dashboard.py  data_loader.py  visualizations.py
