[tool.poetry]
name = "greyhounds"
version = "0.1.0"
description = "greyhounds"
authors = ["Joseph Sy Chu <Joe.SyChu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
betfairlightweight = "^2.20.0"
trueskill = "^0.4.5"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.0"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
